# OpenGL

./: AircraftWar  CMakeCache.txt  CMakeLists.txt  CMakeLists_new.txt  CMakeLists_old.txt  Makefile  ReadMe.md  cmake_install.cmake  main.cc  start.sh
include/: shape.h  window.h
lib/: glad.c
src/: CMakeLists_old.txt  main.cc  shape.cc  window.cc  window.h
